	signal in 'src/sy/sylwpr_client.cpp' and 'src/sy/sylwpr_client.h'.
2015-12-18 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'bool persistent' parameter to the
	'LwrpClient::connectToHost()' method in 'sy/sylwrp_client.cpp' and
	'sy/sylwrp_client.h'.
	* Added an 'unsigned id' parameter to the
	'LwrpClient::connectionError()' signal in 'sy/sylwrp_client.cpp' and
	'sy/sylwrp_client.h'.
2015-12-18 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'SyLwrpClient' class to do an automatic disconnect after
	receiving a network error.
2015-12-18 Fred Gleason <fredg@paravelsystems.com>
	* Changed SWITCHYARD_LWRP_WATCHDOG_INTERVAL_MIN value in
	'sy/syconfig.h' to 60000.0.
	* Changed SWITCHYARD_LWRP_WATCHDOG_INTERVAL_MAX value in
	'sy/syconfig.h' to 180000.0.
2015-12-18 Fred Gleason <fredg@paravelsystems.com>
	* Removed debugging printf from 'sy/sylwprclient.cpp'.
2015-12-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/sylwrp_client.cpp' that broke the
	'SyLwrpClient::connectionError()' signal.
2015-12-21 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SyLwrpClient::startMeter()' and 'SyLwrpClient::stopMeter()'
	methods in 'sy/sylwrp_client.cpp' and 'sy/sylwrp_client.h'.
	* Added a 'SyLwrpClient::meterUpdate()' signal in
	'sy/sylwrp_client.cpp' and 'sy/sylwrp_client.h'.
	* Added an symetertest(1) program in 'tests/'.
2015-12-21 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SyLwrpClient::silenceThreshold()',
	'SyLwrpClient::setSilenceThreshold()',
	'SyLwrpClient::silenceTimeout()', 'SyLwrpClient::setSilenceTimeout()',
	'SyLwrpClient::clipThreshold()', 'SyLwrpClient::setClipThreshold()',
	'SyLwrpClient::clipTimeout()' and 'SyLwrpClient::setClipTimeout()'
	methods in 'sy/sylwrp_client.cpp' and 'sy/sylwrpclient.h'.
	* Added 'SyLwrpClient::audioClipAlarm()' and
	'SyLwrpClient::AudioSilenceAlarm()' signals in 'sy/sylwrp_client.cpp'
	and 'sy/sylwrp_client.h'.
	* Added a 'StatusLight' class in 'tests/statuslight.cpp' and
	'tests/statuslight.h'.